# halo2-analyzer

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  draft.py  poc.py  t.rs
benchmarks/: Cargo.toml
benchmarks/benches/: benchmark_bit_decomp.rs  benchmark_fibo.rs  benchmark_fibo_v1.rs  benchmark_fibo_v2.rs  benchmark_fibo_v2_inline.rs  benchmark_fibo_v2_interpreted.rs  benchmark_fibo_v2_uninterpreted.rs  benchmark_lookup_v1.rs  benchmark_lookup_v2_inline.rs  benchmark_lookup_v2_interpreted.rs  benchmark_lookup_v2_uninterpreted.rs
benchmarks/benches/benchmark_10_matched/: benchmark_10_matched_lookup_v2_inline.rs  benchmark_10_matched_lookup_v2_interpreted.rs
benchmarks/benches/benchmark_15_matched/: benchmark_15_matched_lookup_v2_inline.rs  benchmark_15_matched_lookup_v2_interpreted.rs
benchmarks/benches/benchmark_15_matched copy/: benchmark_15_matched_lookup_v2_inline.rs  benchmark_15_matched_lookup_v2_interpreted.rs
benchmarks/benches/benchmark_30_matched/: benchmark_30_matched_lookup_v2_inline.rs  benchmark_30_matched_lookup_v2_interpreted.rs
benchmarks/benches/benchmark_5_matched/: benchmark_5_matched_lookup_v2_inline.rs  benchmark_5_matched_lookup_v2_interpreted.rs
benchmarks/benches/benchmark_fibo/: benchmark_fibo_v1.rs  benchmark_fibo_v2_inline.rs  benchmark_fibo_v2_interpreted.rs  benchmark_fibo_v2_uninterpreted.rs
benchmarks/benches/benchmark_lookup/: benchmark_lookup_v1.rs  benchmark_lookup_v2_inline.rs  benchmark_lookup_v2_inline_SMT.rs  benchmark_lookup_v2_interpreted.rs  benchmark_lookup_v2_interpreted_SMT.rs  benchmark_lookup_v2_uninterpreted.rs
benchmarks/benches/benchmark_multiple_matched/: benchmark_multiple_matched_lookup_v2_inline.rs  benchmark_multiple_matched_lookup_v2_interpreted.rs
benchmarks/src/: benchmark.rs  benchmark_bit_decomp.rs  benchmark_fibo_v1.rs  benchmark_fibo_v2.rs  main.rs
halo2-under-constrained/: Cargo.toml
halo2-under-constrained/src/: main.rs
korrekt/: .gitignore  Cargo.toml  notes.rs  result.rs  tt.rs  txt.txt
korrekt/src/: AnalyticalRegionLayouter.rs  abstract_expr.rs  analyzer.rs  analyzer_io.rs  analyzer_io_type.rs  benchmark.rs  config.rs  integration_tests.rs  layouter.rs  lib.rs  main.rs  new_layouters.rs  sample_circuits.rs  shape.rs  smt.rs  smt_parser.rs
korrekt/src/benchmarks/: benchmark.rs  mod.rs
korrekt/src/circuit_analyzer/: abstract_expr.rs  analyzable.rs  analyzer.rs  halo2_proofs_libs.rs  layouter.rs  mod.rs  shape.rs
korrekt/src/config/: random_inline.toml  random_interpreted.toml  random_uninterpreted.toml  specific_inline.toml
korrekt/src/io/: analyzer_io.rs  analyzer_io_type.rs  mod.rs
korrekt/src/sample_circuits/: add_multiplication.rs  example4.rs  fibonacci.rs  general_bit_decomp.rs  lookup_underconstrained.rs  mod.rs  multiple_lookups.rs  two_bit_decomp.rs  two_bit_decomp_multirow.rs
korrekt/src/sample_circuits/axiom/bit_decomposition/: add_multiplication.rs  add_multiplication_axiom.rs  mod.rs  two_bit_decomp.rs  two_bit_decomp_axiom.rs  two_bit_decomp_multirow.rs
korrekt/src/sample_circuits/axiom/copy_constraint/: fibo_gpt.rs  fibonacci.rs  fibonacci_constant_init.rs  fibonacci_for_bench.rs  fibonacci_old.rs  fibonacci_pse_base.rs  mod.rs
korrekt/src/sample_circuits/axiom/lookup_circuits/: lookup.rs  lookup_axiom.rs  lookup_underconstrained.rs  lookup_underconstrained_axiom.rs  mod.rs  multiple_lookups.rs  multiple_lookups_axiom.rs  multiple_matched_lookups.rs
korrekt/src/sample_circuits/bit_decomposition/: add_multiplication.rs  add_multiplication_pse.rs  add_multiplication_zcash.rs  general_bit_decomp.rs  mod.rs  two_bit_decomp.rs  two_bit_decomp_multirow.rs  two_bit_decomp_multirow_pse.rs  two_bit_decomp_multirow_zcash.rs  two_bit_decomp_zcash.rs
korrekt/src/sample_circuits/copy_constraint/: fibonacci.rs  fibonacci_for_bench.rs
korrekt/src/sample_circuits/lookup_circuits/: lookup.rs  lookup_pse.rs  lookup_underconstrained.rs  lookup_underconstrained_pse.rs  mod.rs  multiple_lookups.rs  multiple_lookups_pse.rs  multiple_matched_lookups.rs
korrekt/src/sample_circuits/pse/: mod.rs
korrekt/src/sample_circuits/pse/bit_decomposition/: add_multiplication.rs  mod.rs  two_bit_decomp.rs  two_bit_decomp_lookup.rs  two_bit_decomp_multirow.rs  two_bit_decomp_pse.rs
korrekt/src/sample_circuits/pse/copy_constraint/: copy_constraint_from_fixed.rs  fibonacci.rs  fibonacci_constant_init.rs  fibonacci_for_bench.rs
korrekt/src/sample_circuits/pse/lookup_circuits/: lookup.rs  lookup_pse.rs  lookup_underconstrained.rs  lookup_underconstrained_pse.rs  lookup_underconstrained_zcash.rs  lookup_zcash.rs  mod.rs  multiple_lookups.rs  multiple_lookups_pse.rs  multiple_lookups_zcash.rs  multiple_matched_lookups.rs
korrekt/src/sample_circuits/pse/simple/: mul.rs  no_selector.rs  steps.rs  steps_with_fixed.rs
korrekt/src/sample_circuits/pse_v1/: mod.rs
korrekt/src/sample_circuits/pse_v1/bit_decomposition/: add_multiplication.rs  general_bit_decomp.rs  mod.rs  two_bit_decomp.rs  two_bit_decomp_multirow.rs
korrekt/src/sample_circuits/pse_v1/copy_constraint/: fibonacci.rs  fibonacci_for_bench.rs  mod.rs
korrekt/src/sample_circuits/pse_v1/lookup_circuits/: fifteen_matched_lookups.rs  five_matched_lookups.rs  lookup.rs  lookup_underconstrained.rs  mod.rs  multiple_lookups.rs  multiple_matched_lookups.rs  ten_matched_lookups.rs  thirty_matched_lookups.rs  two_matched_lookups.rs
korrekt/src/sample_circuits/pse_v1/simple/: mul.rs  no_selector.rs  steps.rs  steps_with_fixed.rs
korrekt/src/sample_circuits/scroll/: mod.rs
korrekt/src/sample_circuits/scroll/bit_decomposition/: add_multiplication.rs  add_multiplication_scroll.rs  mod.rs  two_bit_decomp.rs  (+3 more)
korrekt/src/smt_solver/: mod.rs  smt.rs  smt_parser.rs
korrekt/src/test/: integration_tests.rs  integration_tests_axiom.rs  integration_tests_mockprover_based.rs  integration_tests_pse.rs  integration_tests_pse_v1.rs  integration_tests_scroll.rs  integration_tests_zcash.rs  mod.rs  pse_test_modulo.rs  pse_test_row_diff_is_zero.rs  test_util.rs
korrekt/src/test/external_circuit_test/: mod.rs  pse_v1_test_row_diff_is_zero.rs
(+72 files in other folders)
