[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_08_19" }
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.2.1" }
korrekt_V2 = { path = "../korrekt", package = "korrekt", features = [] }
korrekt_V1 = { git = "https://github.com/quantstamp/halo2-analyzer.git", branch = "Benchmark-Compatible-V1", package = "korrekt"}
num = "0.4.0"
anyhow = "1.0.71"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
regex = "1.5"

[dev-dependencies]
criterion = "0.3"
clap = "3.0"

[[bench]]
name = "benchmark_bit_decomp"
harness = false

[[bench]]
name = "benchmark_fibo_v1"
path = "benches/benchmark_fibo/benchmark_fibo_v1.rs"
harness = false


[[bench]]
name = "benchmark_fibo_v2_inline"
path = "benches/benchmark_fibo/benchmark_fibo_v2_inline.rs"
harness = false

[[bench]]
name = "benchmark_fibo_v2_uninterpreted"
path = "benches/benchmark_fibo/benchmark_fibo_v2_uninterpreted.rs"
harness = false

[[bench]]
name = "benchmark_fibo_v2_interpreted"
path = "benches/benchmark_fibo/benchmark_fibo_v2_interpreted.rs"
harness = false


[[bench]]
name = "benchmark_lookup_v1"
path = "benches/benchmark_lookup/benchmark_lookup_v1.rs"
harness = false

[[bench]]
name = "benchmark_lookup_v2_inline_SMT"
path = "benches/benchmark_lookup/benchmark_lookup_v2_inline_SMT.rs"
harness = false

[[bench]]
name = "benchmark_lookup_v2_inline"
path = "benches/benchmark_lookup/benchmark_lookup_v2_inline.rs"
harness = false

[[bench]]
name = "benchmark_lookup_v2_uninterpreted"
path = "benches/benchmark_lookup/benchmark_lookup_v2_uninterpreted.rs"
harness = false

[[bench]]
name = "benchmark_lookup_v2_interpreted"
path = "benches/benchmark_lookup/benchmark_lookup_v2_interpreted.rs"
harness = false

[[bench]]
name = "benchmark_lookup_v2_interpreted_SMT"
path = "benches/benchmark_lookup/benchmark_lookup_v2_interpreted_SMT.rs"
harness = false

[[bench]]
name = "benchmark_5_matched_lookup_v2_inline"
path = "benches/benchmark_5_matched/benchmark_5_matched_lookup_v2_inline.rs"
harness = false

[[bench]]
name = "benchmark_10_matched_lookup_v2_interpreted"
path = "benches/benchmark_10_matched/benchmark_10_matched_lookup_v2_interpreted.rs"
harness = false

[[bench]]
name = "benchmark_15_matched_lookup_v2_interpreted"
path = "benches/benchmark_15_matched/benchmark_15_matched_lookup_v2_interpreted.rs"
harness = false

[env]
CRITERION_OUTPUT_FORMAT="json"


