[package]
name = "play-ground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
z3 = "0.11.2"

lazy_static = "1.4"
clap = { version = "3.1.11", features = ["derive"] }
env_logger = "0.9.0"
halo2_proofs = { git = "https://github.com/zcash/halo2.git"}

log = "0.4.17"
paste = "1.0.7"
rand_core = "0.6.3"
rayon = "1.5.2"
num-bigint = "0.4.3"
strum = "0.24"
strum_macros = "0.24"
rand = "0.8"
serde_json = "1.0.66"
serde = {version = "1.0.130", features = ["derive"] }
url = "2.2.2"
itertools = "0.10.1"
pretty_assertions = "1.0.0"
tokio = { version = "1.13", features = ["macros", "rt-multi-thread"] }
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }


[dev-dependencies]
ark-std = { version = "0.3", features = ["print-trace"] }
pretty_assertions = "1.0.0"
rand = "0.8.5"
