[package]
name = "korrekt"
version = "0.1.0"
edition = "2021"

[dependencies]
zcash_halo2_proofs = { git = "https://github.com/zcash/halo2.git", package = "halo2_proofs", optional = true}
pse_halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", package = "halo2_proofs" , optional = true}
axiom_halo2_proofs = { git = "https://github.com/axiom-crypto/halo2.git", package = "halo2-axiom", optional = true}
scroll_halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", package = "halo2_proofs", optional = true}
pse_v1_halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_08_19", package = "halo2_proofs" , optional = true}
# gadgets = { git = "https://github.com/privacy-scaling-explorations/zkevm-circuits.git", rev = "2783eba338274a52036bf3db7fbc29575e24aa9f", package = "gadgets" } TODO: Decide on how to manage tests on real external circuits
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.2.1" }

env_logger = "0.9.0"
log = "0.4.17"
try-catch = "0.2.2"
anyhow = "1.0.71"
regex = "1.8.4"
num = "0.4.0"
rayon = "1.5.1"
ff = "0.13"
group = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "korrekt"
path = "src/lib.rs"

[features]
default = ["use_zcash_halo2_proofs"]
use_zcash_halo2_proofs = ["zcash_halo2_proofs"]
use_pse_halo2_proofs = ["pse_halo2_proofs"]
use_axiom_halo2_proofs = ["axiom_halo2_proofs"]
use_scroll_halo2_proofs = ["scroll_halo2_proofs"]
use_pse_v1_halo2_proofs = ["pse_v1_halo2_proofs"]